--- a/playbooks/create_oscp_logical_volume/README
+++ b/playbooks/create_oscp_logical_volume/README
@@ -1,3 +1,7 @@
 Example command with related variables passed as extra vars:
 
-`ansible-playbook -i inventory/oscp playbooks/create_oscp_logical_volume/tasks/main.yaml -e 'oscp_project=odoo logical_volume_size=5120'`
+```
+ansible-playbook -i inventory/oscp \ 
+playbooks/create_oscp_logical_volume/tasks/main.yaml \
+-e "oscp_project=odoo logical_volume_size=5120"
+```
