--- a/inventory/host_vars/gcc150.fsffrance.org
+++ b/inventory/host_vars/gcc150.fsffrance.org
@@ -15,12 +15,12 @@ gitlab_runner_runners:
            6539623437376135330a303837303564343432643563636235323132313566346366623135386361
            64366161353431313131613835643265623261643037356232353731373762636238
     docker:
-      tls_verify: false
-      image: "fedora:29"
-      privileged: true
-      disable_entrypoint_overwrite: false
-      oom_kill_disable: false
-      disable_cache: true
+      tls_verify: "false"
+      image: "\"fedora:29\""
+      privileged: "true"
+      disable_entrypoint_overwrite: "false"
+      oom_kill_disable: "false"
+      disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
   - name: "GNOME-gcc150"
@@ -36,11 +36,11 @@ gitlab_runner_runners:
            39643636613639333166333535356630313339383035313065326363653339376566
     executor: "docker"
     docker:
-      tls_verify: false
-      image: "fedora:29"
-      privileged: false
-      disable_entrypoint_overwrite: false
-      oom_kill_disable: false
-      disable_cache: true
+      tls_verify: "false"
+      image: "\"fedora:29\""
+      privileged: "false"
+      disable_entrypoint_overwrite: "false"
+      oom_kill_disable: "false"
+      disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
