--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -17,12 +17,13 @@ gitlab_runner_runners:
     docker:
       tls_verify: "false"
       image: "\"fedora:29\""
-      privileged: "true"
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
       disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
+      privileged: "false"
+      security_opts: "seccomp=/etc/docker/flatpak.seccomp.json"
   - name: "gcc176-gnome.osuosl.org"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
@@ -37,9 +38,9 @@ gitlab_runner_runners:
     docker:
       tls_verify: "false"
       image: "\"fedora:29\""
-      privileged: "true"
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
       disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
+      privileged: "false"
