--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -23,7 +23,7 @@ gitlab_runner_runners:
       volumes: '["/cache"]'
       shm_size: 0
       privileged: "false"
-      security_opts: "seccomp=/etc/docker/flatpak.seccomp.json"
+      security_opts: "\"seccomp=/etc/docker/flatpak.seccomp.json\""
   - name: "gcc176-gnome.osuosl.org"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
