--- a/inventory/host_vars/gcc175.fsffrance.org
+++ b/inventory/host_vars/gcc175.fsffrance.org
@@ -22,25 +22,25 @@ gitlab_runner_runners:
       disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
-      privileged: "false"
-      security_opts: "\"seccomp=/etc/docker/flatpak.seccomp.json\""
-  - name: "gcc175-gnome.osuosl.org"
-    output_limit: 32768
-    url: "https://gitlab.gnome.org"
+      privileged: "true"
+  - name: "flatpak-gcc175-osuosl.org"
+    limit: 1
+    output_limit: 16384
+    url: "https://gitlab.gnome.org/"
     token: !vault |
-           $ANSIBLE_VAULT;1.1;AES256
-           33396665373238303365313039323562373337353137333536353236636439373236346164656563
-           3531633435613832376234363361363531666537356530630a623132336462383964636666636464
-           33316534623931613262666538333834303234616232326630613839653466613337343539366266
-           6461303735326535300a633634363139353061663136626431343039636366663434393161663637
-           66653839383438326331323332356661363836666135383537383931326234636636
+          $ANSIBLE_VAULT;1.1;AES256
+          61623366643661313736353937343735623431393365356266353962663031643935353065646433
+          6233383432343539623964653664386334653833336438310a613461373864633037336662383335
+          31383961383130303539333466346238613962633761616437643530323663663238623936376461
+          6264366639633162360a666234316131396666336633363935623031656266393632303032346331
+          63343633633136393765323730383133323433396462393961626266613736323538
     executor: "docker"
     docker:
       tls_verify: "false"
-      image: "\"fedora:29\""
-      privileged: "false"
-      disable_entrypoint_overwrite: "false"
-      oom_kill_disable: "false"
+      image: "\"fedora:28\""
       disable_cache: "true"
-      volumes: '["/cache"]'
       shm_size: 0
+      privileged: "false"
+      cap_drop: '["all"]'
+      volumes: '["/proc:/host/proc"]'
+      flatpak: true
