--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -22,7 +22,7 @@ gitlab_runner_runners:
       disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
-      privileged: "true"
+      privileged: "false"
   - name: "gcc176-gnome.osuosl.org"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
