--- a/inventory/host_vars/progress.gnome.org
+++ b/inventory/host_vars/progress.gnome.org
@@ -22,7 +22,7 @@ gitlab_runner_runners:
       disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
-      privileged: "true"
+      privileged: "false"
   - name: "progress.gnome.org-flatpak"
     limit: 1
     output_limit: 16384
