--- a/inventory/host_vars/fosshost.gnome.org
+++ b/inventory/host_vars/fosshost.gnome.org
@@ -20,10 +20,19 @@ gitlab_runner_runners:
     docker:
       tls_verify: "false"
       image: "\"fedora:31\""
-      disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
       privileged: "false"
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "\"s3.amazonaws.com\""
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
+
   - name: "fosshost.gnome.org-flatpak"
     limit: 1
     output_limit: 16384
@@ -40,8 +49,16 @@ gitlab_runner_runners:
     docker:
       tls_verify: "false"
       image: "\"fedora:31\""
-      disable_cache: "true"
       shm_size: 0
       privileged: "false"
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "\"s3.amazonaws.com\""
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
