--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -19,10 +19,19 @@ gitlab_runner_runners:
       image: "\"fedora:31\""
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
-      disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
       privileged: "false"
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "s3.amazonaws.com"
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
+
   - name: "gcc176-gnome.osuosl.org"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
@@ -39,10 +48,19 @@ gitlab_runner_runners:
       image: "\"fedora:31\""
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
-      disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
       privileged: "false"
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "\"s3.amazonaws.com\""
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
+
   - name: "flatpak-gcc176-osuosl.org"
     limit: 1
     output_limit: 16384
@@ -59,11 +77,11 @@ gitlab_runner_runners:
     docker:
       tls_verify: "false"
       image: "\"fedora:31\""
-      disable_cache: "true"
       shm_size: 0
       privileged: "false"
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
+
   - name: "gcc176-privileged"
     output_limit: 32768
     url: "https://gitlab.gnome.org/"
@@ -80,6 +98,14 @@ gitlab_runner_runners:
       image: "\"fedora:31\""
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
-      disable_cache: "true"
       shm_size: 0
       privileged: "true"
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "\"s3.amazonaws.com\""
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
