--- a/inventory/host_vars/gcc150.fsffrance.org
+++ b/inventory/host_vars/gcc150.fsffrance.org
@@ -51,6 +51,7 @@ gitlab_runner_runners:
       privileged: "false"
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
+      disable_cache: "true"
       volumes: '["/cache"]'
       shm_size: 0
 
@@ -74,3 +75,4 @@ gitlab_runner_runners:
       privileged: "false"
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
+      disable_cache: "true"
