--- a/inventory/host_vars/gcc175.fsffrance.org
+++ b/inventory/host_vars/gcc175.fsffrance.org
@@ -53,15 +53,7 @@ gitlab_runner_runners:
       privileged: "false"
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
-    cache:
-      Type: "\"s3\""
-      Shared: "true"
-    cache.s3:
-      ServerAddress: "\"s3.amazonaws.com\""
-      AccessKey: "{{ gitlab_runner_cache_access_key }}"
-      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
-      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
-      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
+      disable_cache: "true"
 
   - name: "gcc175-privileged"
     output_limit: 32768
@@ -82,3 +74,4 @@ gitlab_runner_runners:
       volumes: '["/cache"]'
       shm_size: 0
       privileged: "true"
+      disable_cache: "true"
