--- a/inventory/host_vars/gcc150.fsffrance.org
+++ b/inventory/host_vars/gcc150.fsffrance.org
@@ -1,11 +1,11 @@
 ---
 ansible_port: 45029
 
-gitlab_runner_concurrent: 16
+gitlab_runner_concurrent: 8
 gitlab_runner_check_interval: 0
 
 gitlab_runner_runners:
-  - name: "gcc150.osuosl.org"
+  - name: "gcc150"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
     executor: "docker"
@@ -35,29 +35,7 @@ gitlab_runner_runners:
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
       BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
 
-  - name: "GNOME-gcc150"
-    output_limit: 32768
-    limit: 2
-    url: "https://gitlab.com/"
-    token: !vault |
-           $ANSIBLE_VAULT;1.1;AES256
-           65363534643637623239623465616534353235623037616561376534306531643038636363656534
-           3635303964323866663665643738346138396263346331370a613336353763373465613666303865
-           62383762666237353537616465343136343337366464303762613863623361306263373538353033
-           3230623064376635660a663232323036623662376636303736623732633038636263383134633463
-           39643636613639333166333535356630313339383035313065326363653339376566
-    executor: "docker"
-    docker:
-      tls_verify: "false"
-      image: "\"fedora:31\""
-      privileged: "false"
-      disable_entrypoint_overwrite: "false"
-      oom_kill_disable: "false"
-      disable_cache: "true"
-      volumes: '["/cache"]'
-      shm_size: 0
-
-  - name: "flatpak-gcc150.osuosl.org"
+  - name: "gcc150-flatpak"
     limit: 1
     output_limit: 16384
     url: "https://gitlab.gnome.org/"
@@ -78,3 +56,34 @@ gitlab_runner_runners:
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
       disable_cache: "true"
+
+  - name: "gcc150-asan"
+    output_limit: 32768
+    url: "https://gitlab.gnome.org/"
+    token: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          34356561313635343463616265363762356230313632333763383564633630343934346630353832
+          6566383264326265663437366365353537306361396461330a323131386561633931383165373435
+          64613164306462356438653365313430663934373464356538333234613661656633303263396635
+          3561303037356362350a646338303964643938326163613734363262306130613331363762333366
+          64666563393832643166333535366132313033346230386461636335623863653636
+    executor: "docker"
+    docker:
+      tls_verify: "false"
+      image: "\"fedora:31\""
+      disable_entrypoint_overwrite: "false"
+      oom_kill_disable: "false"
+      volumes: '["/cache"]'
+      disable_cache: "true"
+      shm_size: 0
+      privileged: "false"
+      cap_add: ["SYS_PTRACE"]
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "\"s3.amazonaws.com\""
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
