--- a/inventory/host_vars/progress.gnome.org
+++ b/inventory/host_vars/progress.gnome.org
@@ -1,11 +1,10 @@
 ---
 gitlab_runner_gc_period: "daily"
-gitlab_runner_concurrent: 5
+gitlab_runner_concurrent: 4
 gitlab_runner_check_interval: 0
 
 gitlab_runner_runners:
-  - name: "progress.gnome.org"
-    limit: 1
+  - name: "progress"
     output_limit: 16384
     url: "https://gitlab.gnome.org/"
     token: !vault |
@@ -34,7 +33,7 @@ gitlab_runner_runners:
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
       BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
 
-  - name: "progress.gnome.org-flatpak"
+  - name: "progress-flatpak"
     limit: 1
     output_limit: 16384
     url: "https://gitlab.gnome.org/"
@@ -55,3 +54,34 @@ gitlab_runner_runners:
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
       disable_cache: "true"
+
+  - name: "progress-asan"
+    output_limit: 16384
+    url: "https://gitlab.gnome.org/"
+    token: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          32643932633262313332333963316637663235623664333963313364376462376364353234353132
+          6133376361333234336633666437366162323563626166360a303237353137646339633739323439
+          30313666386435316137356232313263376337396265626536623061623362643764643861633563
+          6361663737643464370a333137646330653263633935633133333461333239633333633237626661
+          65333239316430386136633465376333323435333838626362393361313833393133
+    executor: "docker"
+    docker:
+      tls_verify: "false"
+      image: "\"fedora:31\""
+      disable_entrypoint_overwrite: "false"
+      oom_kill_disable: "false"
+      volumes: '["/cache"]'
+      disable_cache: "true"
+      shm_size: 0
+      privileged: "false"
+      cap_add: ["SYS_PTRACE"]
+    cache:
+      Type: "\"s3\""
+      Shared: "true"
+    cache.s3:
+      ServerAddress: "\"s3.amazonaws.com\""
+      AccessKey: "{{ gitlab_runner_cache_access_key }}"
+      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
+      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
+      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
