--- a/inventory/host_vars/gcc175.fsffrance.org
+++ b/inventory/host_vars/gcc175.fsffrance.org
@@ -5,7 +5,7 @@ gitlab_runner_concurrent: 8
 gitlab_runner_check_interval: 0
 
 gitlab_runner_runners:
-  - name: "gcc175.osuosl.org"
+  - name: "gcc175"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
     token: !vault |
@@ -35,7 +35,7 @@ gitlab_runner_runners:
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
       BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
 
-  - name: "flatpak-gcc175-osuosl.org"
+  - name: "gcc175-flatpak"
     limit: 1
     output_limit: 16384
     url: "https://gitlab.gnome.org/"
