--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -5,37 +5,7 @@ gitlab_runner_concurrent: 8
 gitlab_runner_check_interval: 0
 
 gitlab_runner_runners:
-  - name: "gcc176.osuosl.org"
-    output_limit: 32768
-    url: "https://gitlab.gnome.org/"
-    token: !vault |
-           $ANSIBLE_VAULT;1.1;AES256
-           64316536666532353138663436306438633465613335356230343465663463323638623564313432
-           3166346437393332396462623062666530623335653035660a393833346536643061623335643064
-           35326164653636613638366337373335376133663363396361623162656237346362616330336337
-           6462353261306635300a393965666265653834643961616563356534343961313864616262623865
-           33626237323862363561386535623466373764326239663066323637343130326330
-    executor: "docker"
-    docker:
-      tls_verify: "false"
-      image: "\"fedora:31\""
-      disable_entrypoint_overwrite: "false"
-      oom_kill_disable: "false"
-      volumes: '["/cache"]'
-      disable_cache: "true"
-      shm_size: 0
-      privileged: "false"
-    cache:
-      Type: "\"s3\""
-      Shared: "true"
-    cache.s3:
-      ServerAddress: "\"s3.amazonaws.com\""
-      AccessKey: "{{ gitlab_runner_cache_access_key }}"
-      SecretKey: "{{ gitlab_runner_cache_secret_key }}"
-      BucketName: "{{ gitlab_runner_cache_bucket_name }}"
-      BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
-
-  - name: "gcc176-gnome.osuosl.org"
+  - name: "gcc176"
     output_limit: 32768
     url: "https://gitlab.gnome.org"
     token: !vault |
@@ -64,7 +34,7 @@ gitlab_runner_runners:
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
       BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
 
-  - name: "flatpak-gcc176-osuosl.org"
+  - name: "gcc176-flatpak"
     limit: 1
     output_limit: 16384
     url: "https://gitlab.gnome.org/"
