--- a/inventory/host_vars/147.75.74.6
+++ b/inventory/host_vars/147.75.74.6
@@ -14,8 +14,8 @@ gitlab_runner_runners:
       privileged: "true"
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
-      disable_cache: "true"
-      volumes: '["/cache"]'
+      disable_cache: "false"
+      volumes: '["/mnt/cache:/cache"]'
       shm_size: 0
 
   - name: "freedesktop-sdk-runner-armv7-codethink"
