--- a/inventory/host_vars/codethink-arm-2.zt.flathub.org
+++ b/inventory/host_vars/codethink-arm-2.zt.flathub.org
@@ -55,3 +55,24 @@ gitlab_runner_runners:
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
       disable_cache: "true"
+
+  - name: "codethink-arm-2.zt.flathub.org (gnome-build-meta)"
+    output_limit: 32768
+    url: "https://gitlab.gnome.org"
+    token: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          37373964653163363734373432356163623238646235393330663365336233383430353539623663
+          3861366265323035363063336330666163616530363865310a396231663838363031363236363135
+          38353661666361386264383965353439373065343733333338353838613564313966633362643665
+          3864346663306232310a366230336261306664396537646231316637383339363936623030346637
+          35396661373662346434666336346562383232623633663866636138326134393035
+    executor: "docker"
+    docker:
+      tls_verify: "false"
+      image: "\"fedora:32\""
+      privileged: "true"
+      disable_entrypoint_overwrite: "false"
+      oom_kill_disable: "false"
+      disable_cache: "false"
+      volumes: '["/mnt/cache:/cache"]'
+      shm_size: 0
