Disable local cache

--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -20,6 +20,7 @@ gitlab_runner_runners:
     docker:
       tls_verify: "false"
       image: "\"fedora:31\""
+      disable_cache: "true"
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
       volumes: '["/cache"]'
