--- a/inventory/host_vars/codethink-arm-1.zt.flathub.org
+++ b/inventory/host_vars/codethink-arm-1.zt.flathub.org
@@ -1,5 +1,5 @@
 ---
-gitlab_runner_concurrent: 2
+gitlab_runner_concurrent: 1
 gitlab_runner_check_interval: 0
 
 gitlab_runner_runners:
@@ -55,3 +55,22 @@ gitlab_runner_runners:
       cap_drop: '["all"]'
       volumes: '["/proc:/host/proc"]'
       disable_cache: "true"
+  - name: "codethink-arm-1.zt.flathub.org (freedesktop-sdk)"
+    output_limit: 32768
+    url: "https://gitlab.gnome.org"
+    token: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          37336231386634306233336435343762306338363234636464616631663464376134616362613436
+          6364346434333735316161313039393638373866656239660a643131376462386532626333656332
+          32663737353530306334363061396565633563386430356565376538383235383636653734616465
+          3164643735623830350a663431303735663330323530643039623935653637346434376533363735
+          32656534313637376334646636663331303136373730336339366434633033303533
+    executor: "docker"
+    docker:
+      tls_verify: "false"
+      image: "\"fedora:31\""
+      privileged: "true"
+      disable_entrypoint_overwrite: "false"
+      oom_kill_disable: "false"
+      disable_cache: "false"
+      shm_size: 0
