--- a/inventory/host_vars/codethink-arm-3.zt.flathub.org
+++ b/inventory/host_vars/codethink-arm-3.zt.flathub.org
@@ -28,7 +28,7 @@ gitlab_runner_runners:
       Type: "\"s3\""
       Shared: "true"
     cache.s3:
-      ServerAddress: "\"s3.amazonaws.com\""
+      ServerAddress: "{{ gitlab_runner_cache_endpoint }}"
       AccessKey: "{{ gitlab_runner_cache_access_key }}"
       SecretKey: "{{ gitlab_runner_cache_secret_key }}"
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
