--- a/inventory/host_vars/progress.gnome.org
+++ b/inventory/host_vars/progress.gnome.org
@@ -27,7 +27,7 @@ gitlab_runner_runners:
       Type: "\"s3\""
       Shared: "true"
     cache.s3:
-      ServerAddress: "\"s3.amazonaws.com\""
+      ServerAddress: "{{ gitlab_runner_cache_endpoint }}"
       AccessKey: "{{ gitlab_runner_cache_access_key }}"
       SecretKey: "{{ gitlab_runner_cache_secret_key }}"
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
@@ -80,8 +80,31 @@ gitlab_runner_runners:
       Type: "\"s3\""
       Shared: "true"
     cache.s3:
-      ServerAddress: "\"s3.amazonaws.com\""
+      ServerAddress: "{{ gitlab_runner_cache_endpoint }}"
       AccessKey: "{{ gitlab_runner_cache_access_key }}"
       SecretKey: "{{ gitlab_runner_cache_secret_key }}"
       BucketName: "{{ gitlab_runner_cache_bucket_name }}"
       BucketLocation: "{{ gitlab_runner_cache_bucket_region }}"
+
+  - name: "progress-flatpak-fdo"
+    limit: 1
+    output_limit: 16384
+    url: "https://gitlab.freedesktop.org/"
+    token: !vault |
+          $ANSIBLE_VAULT;1.1;AES256
+          35613062626261316538313063336433623238393865336165356230663365393636613035326534
+          3532653262346538613764346463633463376639326235610a666563323339623963393437313461
+          30366236643464363439353434383837663437363763323934396535376464326665636234623263
+          3164626633653565350a353234636664643832396166393264366135326536363163363562363462
+          61326631313538393036383732333061643537663766376532316464356166633036
+    executor: "docker"
+    seccomp: "flatpak"
+    docker:
+      tls_verify: "false"
+      image: "\"fedora:31\""
+      shm_size: 0
+      privileged: "false"
+      cap_drop: '["all"]'
+      volumes: '["/proc:/host/proc"]'
+      disable_cache: "true"
+
