--- a/inventory/host_vars/codethink-arm-1.zt.flathub.org
+++ b/inventory/host_vars/codethink-arm-1.zt.flathub.org
@@ -17,7 +17,7 @@ gitlab_runner_runners:
     seccomp: "buildah"
     docker:
       tls_verify: "false"
-      image: "\"fedora:32\""
+      image: "\"alpine:latest\""
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
       volumes: '["/cache"]'
