--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -19,7 +19,7 @@ gitlab_runner_runners:
     executor: "docker"
     docker:
       tls_verify: "false"
-      image: "\"fedora:31\""
+      image: "\"alpine:latest\""
       disable_cache: "true"
       disable_entrypoint_overwrite: "false"
       oom_kill_disable: "false"
@@ -51,7 +51,7 @@ gitlab_runner_runners:
     seccomp: "flatpak"
     docker:
       tls_verify: "false"
-      image: "\"fedora:31\""
+      image: "\"alpine:latest\""
       shm_size: 0
       privileged: "false"
       cap_drop: '["all"]'
