--- a/inventory/host_vars/runner01.meet.gnome.org
+++ b/inventory/host_vars/runner01.meet.gnome.org
@@ -19,7 +19,7 @@ gitlab_runner_runners:
     seccomp: "buildah"
     docker:
       tls_verify: "false"
-      image: "\"alpine:latest\""
+      image: "\"fedora:latest\""
       volumes: '["/cache"]'
       disable_cache: "true"
       shm_size: 0
