--- a/inventory/host_vars/bastion01.gnome.org
+++ b/inventory/host_vars/bastion01.gnome.org
@@ -3,3 +3,5 @@ firewall_additional_rules:
   - "iptables -A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT"
   - "iptables -A FORWARD -s 172.31.2.0/24 -i eth1 -o eth0 -m conntrack --ctstate NEW -j ACCEPT"
 
+firewall_allowed_tcp_ports:
+  - 51820
