--- a/inventory/host_vars/bastion01.gnome.org
+++ b/inventory/host_vars/bastion01.gnome.org
@@ -5,6 +5,7 @@ firewall_additional_rules:
   - "iptables -A FORWARD -s 172.31.2.0/24 -i eth1 -o eth0 -m conntrack --ctstate NEW -j ACCEPT"
   - "iptables -A FORWARD -s 10.8.0.0/24 -i wg0 -o eth0 -m conntrack --ctstate NEW -j ACCEPT"
   - "iptables -A FORWARD -s 10.8.0.0/24 -d 172.31.2.0/24 -i wg0 -o eth1 -m conntrack --ctstate NEW -j ACCEPT"
+  - "iptables -A INPUT -s 10.8.0.0/24 -d 172.31.2.0/24 -i wg0 -j ACCEPT"
 
 firewall_allowed_tcp_ports:
   - 22
