--- a/inventory/host_vars/gcc150.fsffrance.org
+++ b/inventory/host_vars/gcc150.fsffrance.org
@@ -18,6 +18,7 @@ gitlab_runner_runners:
            64366161353431313131613835643265623261643037356232353731373762636238
     seccomp: "buildah"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       disable_entrypoint_overwrite: "false"
@@ -50,6 +51,7 @@ gitlab_runner_runners:
     executor: "docker"
     seccomp: "flatpak"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       shm_size: 0
@@ -70,6 +72,7 @@ gitlab_runner_runners:
           64666563393832643166333535366132313033346230386461636335623863653636
     executor: "docker"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       disable_entrypoint_overwrite: "false"
