--- a/inventory/host_vars/gcc175.fsffrance.org
+++ b/inventory/host_vars/gcc175.fsffrance.org
@@ -18,6 +18,7 @@ gitlab_runner_runners:
     seccomp: "buildah"
     executor: "docker"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       disable_entrypoint_overwrite: "false"
@@ -50,6 +51,7 @@ gitlab_runner_runners:
     executor: "docker"
     seccomp: "flatpak"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       shm_size: 0
