Configure gcc176 to use crun by default

--- a/inventory/host_vars/gcc176.fsffrance.org
+++ b/inventory/host_vars/gcc176.fsffrance.org
@@ -18,6 +18,7 @@ gitlab_runner_runners:
     seccomp: "buildah"
     executor: "docker"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       disable_cache: "true"
