Set container environment variable to "docker" on shared runners
Kaniko seems to have a trouble detecting which container runtime
it runs within, so we need to set it explicitly.

https://github.com/GoogleContainerTools/kaniko/issues/1542

--- a/inventory/host_vars/gcc150.fsffrance.org
+++ b/inventory/host_vars/gcc150.fsffrance.org
@@ -9,6 +9,7 @@ gitlab_runner_runners:
     output_limit: 32768
     url: "https://gitlab.gnome.org"
     executor: "docker"
+    environment: '["container=docker"]'
     token: !vault |
            $ANSIBLE_VAULT;1.1;AES256
            65363864363861646633393131656435343334363466623065633732616565653536643537316364
