--- a/inventory/host_vars/progress.gnome.org
+++ b/inventory/host_vars/progress.gnome.org
@@ -19,6 +19,7 @@ gitlab_runner_runners:
     executor: "docker"
     seccomp: "buildah"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       volumes: '["/cache"]'
@@ -49,6 +50,7 @@ gitlab_runner_runners:
     executor: "docker"
     seccomp: "flatpak"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       shm_size: 0
@@ -69,6 +71,7 @@ gitlab_runner_runners:
           63313165346530643532626339353635353433633932323638323065626161633732
     executor: "docker"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       disable_entrypoint_overwrite: "false"
@@ -102,6 +105,7 @@ gitlab_runner_runners:
     executor: "docker"
     seccomp: "flatpak"
     docker:
+      runtime: "\"crun\""
       tls_verify: "false"
       image: "\"fedora:latest\""
       shm_size: 0
