--- a/roles/nsd/files/unsigned_zones/pygtk.org
+++ b/roles/nsd/files/unsigned_zones/pygtk.org
@@ -10,9 +10,9 @@ $TTL 3600
     IN    NS    ns-slave.gnome.org.
     IN    MX    10    www.async.com.br.
 
-    IN  A   8.43.85.13    
-    IN  A   8.43.85.14
-    IN  A   8.43.85.29
+    IN  A   8.43.85.3    
+    IN  A   8.43.85.4
+    IN  A   8.43.85.5
 
-www IN  CNAME    openshift.gnome.org.
+www IN  CNAME    router-default.apps.openshift4.gnome.org.
 irc IN  CNAME    irc.gnome.org.
