Skip firewalld on Equinix runners, bbb2 and flat-manager

--- a/inventory/host_vars/flat-manager.gnome.org
+++ b/inventory/host_vars/flat-manager.gnome.org
@@ -1,4 +1,6 @@
 ---
+skip_firewalld: true
+
 flat_manager_cdn77_token: !vault |
           $ANSIBLE_VAULT;1.1;AES256
           39316531303866343766386539646639653162323639643436396334663638323266386538613365
