Disable Blackbox on signal

--- a/inventory/host_vars/signal.gnome.org
+++ b/inventory/host_vars/signal.gnome.org
@@ -6,5 +6,5 @@ firewall_allowed_tcp_ports:
   - 443
 nrpe_custom_plugins:
   - check_vpn
-enable_blackbox: true
+enable_blackbox: false
 sshguard_enabled: true
